Recepie-Ingredient relation problems solved and improved

--- a/src/main/resources/templates/catering.html
+++ b/src/main/resources/templates/catering.html
@@ -188,7 +188,7 @@
 	};
 	
 	function postDummyRecepies() {
-		postData("recepie",'{"name":"Onion soup","unitType":"Bowl","recepieType":"Soup","caloriePerPortion":45,"portionPerRecepie":10,"ingredients":{"ingredient_amount":1, "ingredientId":1, "recepieId":6},{"ingredient_amount":2,"ingredient_Id":2, "recepie_Id":6}}');
+		postData("recepie",'{"name":"Onion soup","unitType":"Bowl","recepieType":"Soup","caloriePerPortion":45,"portionPerRecepie":10,"ingredients":[{"ingredient_amount":1, "ingredient_Id":1, "recepie_Id":6},{"ingredient_amount":2,"ingredient_Id":2, "recepie_Id":6}]}');
 		postData("recepie",'{"name":"French Fries","unitType":"Appetizer Plate","recepieType":"Fast Food","caloriePerPortion":75,"portionPerRecepie":12,"ingredients":[]}');
 		postData("recepie",'{"name":"French Fries 2","unitType":"Appetizer Plate","recepieType":"Fast Food","caloriePerPortion":75.0,"portionPerRecepie":12.0,"ingredients":[{"ingredient_Id":1,"ingredient_amount":1.2,"ingredient":{"id":1,"name":"Black Pepper Grinded","type":"Spice","unitType":"gr","caloriePerUnit":0.01}},{"ingredient_Id":2,"ingredient_amount":2.0,"ingredient":{"id":2,"name":"Potato","type":"Vegetable","unitType":"Piece","caloriePerUnit":0.4}},{"ingredient_Id":3,"ingredient_amount":3.0,"ingredient":{"id":3,"name":"Beef Meat Ball","type":"Meat","unitType":"gr","caloriePerUnit":0.15}}]}');		
 	};
@@ -651,38 +651,39 @@
 		getOneById("recepie",id);
 	}
 	
-	function putRecepie() {  
-		var id = document.getElementById("id_input").value;
-		var name = document.getElementById("name_input").value;
-		var unitType = document.getElementById("unit_type_input").value;
-		var recepieType = document.getElementById("recepie_type_input").value;
-		var calorie = document.getElementById("calorie_per_portion_input").value;
-		var portion = document.getElementById("portion_per_recepie_input").value;
-		checkPostRecepie(true);
-		putData("recepie",'{"id":"'+ id +'","name":"'+name+'","unitType":"'+unitType+'","recepieType":"'+recepieType+'","caloriePerPortion":'+calorie+',"portionPerRecepie":'+portion+'}');
-	};
 	//-----------------Edit Recepie End--------------------
 	
 	
-	//Add New Recepie Function
+	//Add New Recepie and Edit Recepie Function
 	//Also Checks Recepie has any Ingredient(s)
 	function checkPostRecepie(putMode) {  
 		var checkboxs = document.getElementsByTagName("input");
 		var checkboxList = "" , checkboxListUnchecked = "";
 		for(var i = 0; i < checkboxs.length; i++) {
 		    if(checkboxs[i].type == "checkbox") {
-		    	if(checkboxs[i].checked == true) {
-		    		if(checkboxList.length < 1) {
-		    			checkboxList = checkboxList + '{"ingredient_Id":'+ checkboxs[i].id +',"ingredient_amount":'+ document.getElementById(checkboxs[i].id+"_input").value +'}';
-		    		}else{
-		    			checkboxList = checkboxList + ',{"ingredient_Id":'+ checkboxs[i].id +',"ingredient_amount":'+ document.getElementById(checkboxs[i].id+"_input").value +'}';
-		    		}
-		    	}else{
-		    		if(checkboxListUnchecked.length < 1) {
-		    			checkboxListUnchecked = checkboxListUnchecked + '{"ingredient_Id":'+ checkboxs[i].id +',"ingredient_amount":'+ document.getElementById(checkboxs[i].id+"_input").value +'}';
-		    		}else{
-		    			checkboxListUnchecked = checkboxListUnchecked + ',{"ingredient_Id":'+ checkboxs[i].id +',"ingredient_amount":'+ document.getElementById(checkboxs[i].id+"_input").value +'}';
-		    		}
+		    	if(putMode== true){
+		    		var id = document.getElementById("id_input").value;
+			    	if(checkboxs[i].checked == true) {
+			    		if(checkboxList.length < 1) {
+			    			checkboxList = checkboxList + '{"ingredient_Id":'+ checkboxs[i].id +',"ingredient_amount":'+ document.getElementById(checkboxs[i].id+"_input").value +',"recepie_Id":'+id+'}';
+			    		}else{
+			    			checkboxList = checkboxList + ',{"ingredient_Id":'+ checkboxs[i].id +',"ingredient_amount":'+ document.getElementById(checkboxs[i].id+"_input").value +',"recepie_Id":'+id+'}';
+			    		}
+			    	}else{
+			    		if(checkboxListUnchecked.length < 1) {
+			    			checkboxListUnchecked = checkboxListUnchecked + '{"ingredient_Id":'+ checkboxs[i].id +',"recepie_Id":'+id+'}';
+			    		}else{
+			    			checkboxListUnchecked = checkboxListUnchecked + ',{"ingredient_Id":'+ checkboxs[i].id +',"recepie_Id":'+id+'}';
+			    		}
+			    	};
+				}else{
+			    	if(checkboxs[i].checked == true) {
+			    		if(checkboxList.length < 1) {
+			    			checkboxList = checkboxList + '{"ingredient_Id":'+ checkboxs[i].id +',"ingredient_amount":'+ document.getElementById(checkboxs[i].id+"_input").value +'}';
+			    		}else{
+			    			checkboxList = checkboxList + ',{"ingredient_Id":'+ checkboxs[i].id +',"ingredient_amount":'+ document.getElementById(checkboxs[i].id+"_input").value +'}';
+			    		}
+			    	};
 		    	};
 		    };
 		};
@@ -693,12 +694,9 @@
 			var calorie = document.getElementById("calorie_per_portion_input").value;
 			var portion = document.getElementById("portion_per_recepie_input").value;
 			if(putMode== true){
-				//putData("recepie",'['+checkboxList+']');
-				//deleteData("recepie_ingredient",'[{"recepie_id":'+ id_input +',"ingredient_id":'+ checkboxListUnchecked[i] +'}]');
+				putData("recepie",'{"id":'+ id +',"name":"'+name+'","unitType":"'+unitType+'","recepieType":"'+recepieType+'","caloriePerPortion":'+calorie+',"portionPerRecepie":'+portion+',"ingredients":['+ checkboxList +']}');
 			}else{
 				postData("recepie",'{"name":"'+name+'","unitType":"'+unitType+'","recepieType":"'+recepieType+'","caloriePerPortion":'+calorie+',"portionPerRecepie":'+portion+',"ingredients":['+ checkboxList +']}');
-
-				alert('{"name":"'+name+'","unitType":"'+unitType+'","recepieType":"'+recepieType+'","caloriePerPortion":'+calorie+',"portionPerRecepie":'+portion+',"ingredients":['+ checkboxList +']}');
 			}
 		}else{
 			alert("Please select 1 or more ingredients with amount for adding recepie");
@@ -755,10 +753,9 @@
 		var divButton = document.createElement("DIV");
 		divButton.className ="col-sm-offset-3 col-sm-8";
 		if(myObj != null){
-			getIngredientsForRecepie("ingredient");
 			var textNode = document.createTextNode("Save Changes");
 			var button = document.createElement("BUTTON");
-			button.onclick = putRecepie;
+			button.onclick = function(){checkPostRecepie(true)};
 			button.className="btn btn-default";
 			button.appendChild(textNode);
 			divButton.appendChild(button);
@@ -768,7 +765,7 @@
 			button.className="btn btn-default";
 			button.appendChild(textNode);
 			divButton.appendChild(button);
-			getSelectedIngredientsData("recepie_ingredient",myObj.id)
+			getSelectedIngredientsData("recepie",myObj.id)
 		}
 		else {
 			var textNode = document.createTextNode("Add Recepie");
@@ -845,17 +842,18 @@
 		xhttp.onreadystatechange = function() {
 			if (this.readyState == 4 && this.status == 200) {
 				myObj = JSON.parse(this.responseText);
+				myArr = myObj.ingredients;
 				if(myObj != "") {
-					alert("Ingredients for " + myObj[0].recepie.name + " recepie loading for editing");
+					alert("Ingredients for " + myObj.name + " recepie loading for editing");
 					//I need a delay, otherwise getting ingredients code working late
-				}; 
-				for(x in myObj){
-					document.getElementById(myObj[x].ingredientId).checked = true;
-					document.getElementById(myObj[x].ingredientId + "_input").value = myObj[x].ingredient_amount;
+				};
+				for(x in myArr){
+					document.getElementById(myArr[x].ingredient_Id).checked = true;
+					document.getElementById(myArr[x].ingredient_Id + "_input").value = myArr[x].ingredient_amount;
 				}
 			}
 		};
-		xhttp.open("GET", "http://localhost:8082/api/" + api + "/" + id + "/recepie");
+		xhttp.open("GET", "http://localhost:8082/api/" + api + "/" + id + "/single");
 		xhttp.setRequestHeader("Content-type", "application/json");
 		xhttp.send();
 	}
@@ -1041,20 +1039,7 @@
 		var xhttp = new XMLHttpRequest();
 		xhttp.onreadystatechange = function() {
 			if (this.readyState == 4 && this.status == 202) {
-				switch(api){
-					default:
-						document.getElementById("Container").innerHTML = this.responseText+" Item Added";
-						break;
-					case "recepie":
-					case "meallist":
-						var label = document.createElement("LABEL");
-						var text = document.createTextNode(this.responseText);
-						label.appendChild(text);
-						label.style.display = "none";
-						label.id="id_input";
-						document.getElementById("Container").appendChild(label);
-						break;
-				}
+				document.getElementById("Container").innerHTML = this.responseText+" Item Added";
 			}
 		};
 		xhttp.open("POST", "http://localhost:8082/api/" + api, true);
